--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,19 @@
         android:theme="@style/Theme.LocoBar"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Payment"
+            android:exported="false" />
+        <activity
+            android:name=".Basket"
+            android:exported="false" />
+        <activity
+            android:name=".EditMenu"
+            android:exported="false" />
+        <activity
+            android:name=".Menu"
+            android:exported="false" />
+        <activity
+            android:name=".Frontpage"
             android:exported="false" />
     </application>
 
