--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,15 @@
             android:exported="false" />
         <activity
             android:name=".Frontpage"
-            android:exported="false" />
+            android:exported="true">
+
+          <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+          </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
